# memviz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: app.cpp  gfx.cpp  gfx.h  memscan.cpp  memscan.h  model.cpp  model.h
